# SDL2-slideshow

./: CMakeLists.txt  README.md  planning.txt
include/: button.h  main.h
src/: main.cpp
